--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -34,6 +34,9 @@
   become_user: root
   tags: jcagent
   when: not (jcagent_result|success)
+  register: jc_install
+  
+- debug: msg={{jc_install}}
 
 - name: install jumpcloud gem
   environment:
