another attempt at service checking

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -12,12 +12,19 @@
 #     "{{item}}": "{{(secrets.contents|from_yaml)['all'][item]}}"
 #   with_items:
 #     - jumpcloud_connect_key
+- service:
+    name: jcagent
+    state: stopped
+  register: jcagent_result
+  ignore_errors: true
+  tags: jcagent
 
 - get_url:
     url: "{{ jumpcloud_installer_url }}"
     headers: "x-connect-key:{{ jumpcloud_connect_key }}"
     dest: /tmp/jc.install.sh
     mode: 0775
+  register: jcagent_result
   when: not (jcagent_result|success)
   tags: jcagent
 
@@ -89,5 +96,5 @@
     name: jcagent
     state: started
   register: jcagent_result
-  ignore_errors: true
-  tags: jcagent
+  # ignore_errors: true
+  # tags: jcagent
