--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -12,12 +12,12 @@
 #     "{{item}}": "{{(secrets.contents|from_yaml)['all'][item]}}"
 #   with_items:
 #     - jumpcloud_connect_key
-- service:
-    name: jcagent
-    state: stopped
-  register: jcagent_result
-  ignore_errors: true
-  tags: jcagent
+# - service:
+#     name: jcagent
+#     state: stopped
+#   register: jcagent_result
+#   ignore_errors: true
+#   tags: jcagent
 
 - get_url:
     url: "{{ jumpcloud_installer_url }}"
@@ -25,7 +25,7 @@
     dest: /tmp/jc.install.sh
     mode: 0775
   register: jcagent_result
-  when: not (jcagent_result|success)
+  # when: not (jcagent_result|success)
   tags: jcagent
 
 - shell:
@@ -33,7 +33,7 @@
   become: yes
   become_user: root
   tags: jcagent
-  when: not (jcagent_result|success)
+  # when: not (jcagent_result|success)
 
 - name: create /tmp/jumpcloud_tag.rb
   copy:
