adding conditional clean up for AMI build

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,5 +3,6 @@ jumpcloud_installer_url: "https://kickstart.jumpcloud.com/Kickstart"
 
 # Credentials
 jumpcloud_connect_key: ""
+jumpcloud_image_build: false
 
 run: true
