--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,24 +1,5 @@
 ---
 
-# - name: get secrets.yml from S3
-#   s3:
-#     bucket: "{{ secrets_bucket }}"
-#     object: "secrets.yml"
-#     mode: 'getstr'
-#   register: secrets
-#   changed_when: false
-#
-# - set_fact:
-#     "{{item}}": "{{(secrets.contents|from_yaml)['all'][item]}}"
-#   with_items:
-#     - jumpcloud_connect_key
-# - service:
-#     name: jcagent
-#     state: stopped
-#   register: jcagent_result
-#   ignore_errors: true
-#   tags: jcagent
-
 - get_url:
     url: "{{ jumpcloud_installer_url }}"
     headers: "x-connect-key:{{ jumpcloud_connect_key }}"
@@ -97,9 +78,25 @@
   tags: jcagent
   changed_when: false
 
-- service:
-    name: jcagent
-    state: started
-  register: jcagent_result
-  # ignore_errors: true
-  # tags: jcagent
+# if this is being installed as part of am AMI build we need to clean up
+# to allow registration to take place correctly later:
+# https://support.jumpcloud.com/customer/portal/articles/2399081-deploying-the-jumpcloud-agent-using-a-template-or-system-image
+
+- block:
+  - name: stop jumpcloud agent for image build clean up
+    service:
+      name: jcagent
+      state: stopped
+    become: yes
+
+  - name: cleanup config files for image build - {{ item }}
+    file:
+      path: "{{ item }}"
+      state: 'absent'
+    with_items:
+      - '/opt/jc/ca.crt'
+      - '/opt/jc/client.crt'
+      - '/opt/jc/client.key'
+      - '/opt/jc/jcagent.conf'
+    become: yes
+  when: jumpcloud_image_build
