--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,3 +8,6 @@ jumpcloud_image_build: false
 jumpcloud_install: true
 jumpcloud_tag: false
 jumpcloud_tag_name: 'jumpcloud'
+
+jumpcloud_bundler_command: 'bundler'
+jumpcloud_bundle_command: 'bundle'
