--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 ---
 galaxy_info:
-  author: Robert Warmack 
+  author: Robert Warmack , Matthias Johnson
   description: Ansible Role to install JC Agent
   license: license (MIT)
   min_ansible_version: 1.7
