adding shutdown scripts and vars

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,7 +3,10 @@ jumpcloud_installer_url: "https://kickstart.jumpcloud.com/Kickstart"
 
 # Credentials
 jumpcloud_connect_key: ""
+
 jumpcloud_image_build: false
+jc_shutdown_cleanup: false
+jc_shutdown_cleanup_delete: true
 
 jumpcloud_install: true
 jumpcloud_tag: false
