--- a/tasks/deregister.yml
+++ b/tasks/deregister.yml
@@ -3,13 +3,13 @@
 - name: install deregistration | delete
   copy:
     src: init-jumpcloud-cleanup-delete.sh
-    desg: /etc/init.d/jumpcloud-cleanup
+    dest: /etc/init.d/jumpcloud-cleanup
   when: jumpcloud_shutdown_cleanup_delete
 
 - name: install deregistration | rename
   copy:
     src: init-jumpcloud-cleanup-delete.sh
-    desg: /etc/init.d/jumpcloud-cleanup
+    dest: /etc/init.d/jumpcloud-cleanup
   when: not jumpcloud_shutdown_cleanup_delete
 
 - name: make deregistration executable
