Sans secrets and other augmentations (#5)
- split the plays for tagging out from install
- added code to clean up a registred box when building an AMI to avoid multiple boxes with the same identity
- added ability to force specific commands for bundler and bundle
- added some docs.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,13 @@
 ---
-jc_installer_script: "https://kickstart.jumpcloud.com/Kickstart"
+jumpcloud_installer_url: "https://kickstart.jumpcloud.com/Kickstart"
 
 # Credentials
-jc_agent_accesskey: ""
+jumpcloud_connect_key: ""
+jumpcloud_image_build: false
 
-run: true
+jumpcloud_install: true
+jumpcloud_tag: false
+jumpcloud_tag_name: 'jumpcloud'
+
+jumpcloud_bundler_command: 'bundler'
+jumpcloud_bundle_command: 'bundle'
