--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,6 +3,7 @@ jumpcloud_installer_url: "https://kickstart.jumpcloud.com/Kickstart"
 
 # Credentials
 jumpcloud_connect_key: ""
+
 jumpcloud_image_build: false
 
 jumpcloud_install: true
@@ -11,3 +12,6 @@ jumpcloud_tag_name: 'jumpcloud'
 
 jumpcloud_bundler_command: 'bundler'
 jumpcloud_bundle_command: 'bundle'
+
+jumpcloud_shutdown_cleanup: false
+jumpcloud_shutdown_cleanup_delete: false
