--- a/tasks/tag.yml
+++ b/tasks/tag.yml
@@ -79,3 +79,10 @@
   register: http_outcome
   ignore_errors: yes
   when: jumpcloud_system_key is defined and jc_system_groups is defined
+
+- name: make sure jumpcloud agent is restarted
+  service:
+    name: jcagent
+    state: restarted
+  ignore_errors: true
+  become: yes
