--- a/tasks/tag.yml
+++ b/tasks/tag.yml
@@ -7,6 +7,11 @@
   ignore_errors: true
   become: yes
 
+- name: make sure jumpcloud conf exists
+  wait_for:
+    path: '/opt/jc/jcagent.conf'
+  become: yes
+
 - name: get JumpCloud SystemKey
   command: grep -o -P '(?<=systemKey\":\")[a-zA-Z0-9]*' /opt/jc/jcagent.conf
   register: jumpcloud_system_key
